Fixed maximized windows overlapping taskbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@
 .desktop-environment, .desktop-usable-area {
   width: 100%;
   height: 100%;
-  
+  position: relative;
   display: flex;
   flex-flow: column nowrap;
 }
